updated news today

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -456,23 +456,33 @@
           </div>
           <div class="row">
             <div class="col-lg-4 col-sm-12 col-md-6">
-                  <div class=" col-sm-12 grid-margin">
-                <div class="card border cursor-pointer" onclick="window.open('/presidentphoto','_blank').focus">
-                  <img class="card-img-top rounded" src="images/gallery/PresidentDroupadiMurmu/Image1.JPG" alt="Vendors ">
+              <div class=" col-sm-12 grid-margin">
+                <div class="card border cursor-pointer" onclick="window.open('/CM','_blank').focus">
+                  <img class="card-img-top rounded" src="images/gallery/CM/Image1.JPG" alt="Vendors ">
                   <div class="card-body">
-                    <p class="card-text">The President of India her Excellency Droupadi Murmu launches a slew of government projects including the new MLA hostel close to the Civil secretariat on October 12.</p>
+                    <p class="card-text">Chief Minister Prof Dr Manik Saha  attend State Level Programme for 4 years completion of Ayushman Bharat at Agartala on Oct 15</p>
+                  </div>
+                </div>
+              </div> 
+              <div class=" col-sm-12 grid-margin">
+                <div class="card border cursor-pointer" onclick="window.open('/amarabengali','_blank').focus">
+                  <img class="card-img-top rounded" src="images/gallery/amarabengali/Image1.jpg"
+                    alt="Amara bengali held a pressmeet">
+                  <div class="card-body">
+                    <p class="card-text">Amara bengali held a pressmeet in Agartala on oct015</p>
                   </div>
                 </div>
               </div>
+            
               <div class=" col-sm-12 grid-margin">
-                <div class="card border cursor-pointer" onclick="window.open('/dailynewsphoto','_blank').focus">
+              <div class="card border cursor-pointer" onclick="window.open('/dailynewsphoto','_blank').focus">
                   <img class="card-img-top rounded" src="images/gallery/DailyNewsPholoAlbum/Image2.JPG"
                     alt="Shopkeepers in Agartala">
                   <div class="card-body">
                     <p class="card-text">Shopkeepers in Agartala displayed firecrackers at their makeshift shops in
                       Agartala before the worship of Goddess Laxmi on October 9 next.</p>
                   </div>
-                </div>
+              </div>
               </div>
               <div class=" col-sm-12 grid-margin">
                 <div class="card border cursor-pointer" onclick="window.open('/dailynewsphoto','_blank').focus">
@@ -483,9 +493,19 @@
                       on a street of Agartala on October 7.</p>
                   </div>
                 </div>
-              </div>           
+              </div>  
+         
+                         
             </div>
             <div class="col-lg-4 col-sm-12  col-md-6">
+                <div class=" col-sm-12 grid-margin">
+                <div class="card border cursor-pointer" onclick="window.open('/officesports','_blank').focus">
+                  <img class="card-img-top rounded" src="images/gallery/officesports/Image1.JPG" alt="Vendors ">
+                  <div class="card-body">
+                    <p class="card-text">Inter office sports and cultural association held a pressmeet in Agartala on Oct 15</p>
+                  </div>
+                </div>
+              </div> 
               <div class="col-sm-12  grid-margin">
                 <div class="card border cursor-pointer" onclick="window.open('/dailynewsphoto','_blank').focus">
                   <img class="card-img-top rounded" src="images/gallery/DailyNewsPholoAlbum/Image4.JPG"
@@ -505,8 +525,36 @@
                   </div>
                 </div>
               </div>
+                    <div class="col-sm-12  grid-margin">
+                <div class="card border cursor-pointer" onclick="window.open('/dailynewsphoto','_blank').focus">
+                  <img class="card-img-top rounded" src="images/gallery/DailyNewsPholoAlbum/Image6.JPG"
+                    alt="The qualified candidates for the Selection Test for Graduate Teachers (STGT)">
+                  <div class="card-body">
+                    <p class="card-text">The Bhutia community traders, who are setting winter garment stall in Agartala
+                      every winter, are now making their makeshift stall in Battala TRTC complex in Agartala on October
+                      10.</p>
+                  </div>
+                </div>
+              </div>
             </div>
             <div class="col-lg-4 col-sm-12  col-md-6">
+               <div class=" col-sm-12 grid-margin">
+                <div class="card border cursor-pointer" onclick="window.open('/stgt','_blank').focus">
+                  <img class="card-img-top rounded" src="images/gallery/stgt/Image1.jpg"
+                    alt="STGT candidates meet Minister Sushanta Chowdhury at his official residence on October 15">
+                  <div class="card-body">
+                    <p class="card-text">STGT candidates meet Minister Sushanta Chowdhury at his official residence on October 15</p>
+                  </div>
+                </div>
+              </div>
+           <div class=" col-sm-12 grid-margin">
+                <div class="card border cursor-pointer" onclick="window.open('/presidentphoto','_blank').focus">
+                  <img class="card-img-top rounded" src="images/gallery/PresidentDroupadiMurmu/Image1.JPG" alt="Vendors ">
+                  <div class="card-body">
+                    <p class="card-text">The President of India her Excellency Droupadi Murmu launches a slew of government projects including the new MLA hostel close to the Civil secretariat on October 12.</p>
+                  </div>
+                </div>
+              </div>
               <div class=" col-sm-12 grid-margin">
                 <div class="card border cursor-pointer" onclick="window.open('/dailynewsphoto','_blank').focus">
                   <img class="card-img-top rounded" src="images/gallery/DailyNewsPholoAlbum/Image3.jpg"
@@ -520,17 +568,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-sm-12  grid-margin">
-                <div class="card border cursor-pointer" onclick="window.open('/dailynewsphoto','_blank').focus">
-                  <img class="card-img-top rounded" src="images/gallery/DailyNewsPholoAlbum/Image6.JPG"
-                    alt="The qualified candidates for the Selection Test for Graduate Teachers (STGT)">
-                  <div class="card-body">
-                    <p class="card-text">The Bhutia community traders, who are setting winter garment stall in Agartala
-                      every winter, are now making their makeshift stall in Battala TRTC complex in Agartala on October
-                      10.</p>
-                  </div>
-                </div>
-              </div>
+        
             </div>
           </div>
 
