image issue fixed

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -466,7 +466,7 @@
               </div> 
               <div class=" col-sm-12 grid-margin">
                 <div class="card border cursor-pointer" onclick="window.open('/amarabengali','_blank').focus">
-                  <img class="card-img-top rounded" src="images/gallery/amarabengali/Image1.jpg"
+                  <img class="card-img-top rounded" src="images/gallery/amarabengali/Image1.JPG"
                     alt="Amara bengali held a pressmeet">
                   <div class="card-body">
                     <p class="card-text">Amara bengali held a pressmeet in Agartala on oct015</p>
@@ -540,7 +540,7 @@
             <div class="col-lg-4 col-sm-12  col-md-6">
                <div class=" col-sm-12 grid-margin">
                 <div class="card border cursor-pointer" onclick="window.open('/stgt','_blank').focus">
-                  <img class="card-img-top rounded" src="images/gallery/stgt/Image1.jpg"
+                  <img class="card-img-top rounded" src="images/gallery/stgt/Image1.JPG"
                     alt="STGT candidates meet Minister Sushanta Chowdhury at his official residence on October 15">
                   <div class="card-body">
                     <p class="card-text">STGT candidates meet Minister Sushanta Chowdhury at his official residence on October 15</p>
