changed NEH to IBNS

--- a/views/allnews.hbs
+++ b/views/allnews.hbs
@@ -27,7 +27,7 @@
                           {{this.title}}
                           </h2>
                           <p class="fs-13 text-muted mb-0">
-                            <span class="mr-2">NEH </span>{{publishedAt}}
+                            <span class="mr-2">{{category}} </span>{{publishedAt}}
                           </p>
                           <p class="fs-15">
                            {{this.description}}
