--- a/views/home.hbs
+++ b/views/home.hbs
@@ -32,7 +32,7 @@
               {{title}}
             </h1>
             <div class="fs-12">
-              <span class="mr-2">NEH </span>10 Minutes ago
+              <span class="mr-2">{{category}}</span>10 Minutes ago
             </div>
           </div>
         </div>
@@ -47,7 +47,7 @@
           <div class="pr-3 news-a cursor-pointer" onclick="window.location.href = '/news?category={{newsCategory}}&id={{id}}'">
             <h5>{{title}}</h5>
             <div class="fs-12">
-              <span class="mr-2">NEH </span>{{publishedAt}}
+              <span class="mr-2">{{category}}</span>{{publishedAt}}
             </div>
           </div>
           <div class="rotate-img latest-news-home cursor-pointer" onclick="window.location.href = '/news?category={{newsCategory}}&id={{id}}'">
@@ -86,7 +86,7 @@
                 {{title}}
               </h2>
               <div class="fs-13 mb-2">
-                <span class="mr-2">NEH</span>{{publishedAt}}
+                <span class="mr-2">{{category}}</span>{{publishedAt}}
               </div>
               <p class="mb-0 a-black">
                 {{description}}
@@ -134,7 +134,7 @@
                 {{title}}
               </h2>
               <div class="fs-13 mb-2">
-                <span class="mr-2">NEH</span>{{publishedAt}}
+                <span class="mr-2">{{category}}</span>{{publishedAt}}
               </div>
               <p class="mb-0 a-black">
                 {{description}}
@@ -185,7 +185,7 @@
                 {{title}}
               </h2>
               <div class="fs-13 mb-2">
-                <span class="mr-2">NEH</span>{{publishedAt}}
+                <span class="mr-2">{{category}}</span>{{publishedAt}}
               </div>
               <p class="mb-0 a-black">
                 {{description}}
@@ -233,7 +233,7 @@
                 {{title}}
               </h2>
               <div class="fs-13 mb-2">
-                <span class="mr-2">NEH</span>{{publishedAt}}
+                <span class="mr-2">{{category}}</span>{{publishedAt}}
               </div>
               <p class="mb-0 a-black">
                 {{description}}
@@ -281,7 +281,7 @@
                 {{title}}
               </h2>
               <div class="fs-13 mb-2">
-                <span class="mr-2">NEH</span>{{publishedAt}}
+                <span class="mr-2">{{category}}</span>{{publishedAt}}
               </div>
               <p class="mb-0 a-black">
                 {{description}}
@@ -329,7 +329,7 @@
                 {{title}}
               </h2>
               <div class="fs-13 mb-2">
-                <span class="mr-2">NEH</span>{{publishedAt}}
+                <span class="mr-2">{{category}}</span>{{publishedAt}}
               </div>
               <p class="mb-0 a-black">
                 {{description}}
@@ -377,7 +377,7 @@
                 {{title}}
               </h2>
               <div class="fs-13 mb-2">
-                <span class="mr-2">NEH</span>{{publishedAt}}
+                <span class="mr-2">{{category}}</span>{{publishedAt}}
               </div>
               <p class="mb-0 a-black">
                 {{description}}
@@ -425,7 +425,7 @@
                 {{title}}
               </h2>
               <div class="fs-13 mb-2">
-                <span class="mr-2">NEH</span>{{publishedAt}}
+                <span class="mr-2">{{category}}</span>{{publishedAt}}
               </div>
               <p class="mb-0 a-black">
                 {{description}}
