--- a/views/home.hbs
+++ b/views/home.hbs
@@ -32,7 +32,7 @@
               {{title}}
             </h1>
             <div class="fs-12">
-              <span class="mr-2">{{category}}</span>10 Minutes ago
+              <span class="mr-2">{{category}}</span>
             </div>
           </div>
         </div>
