--- a/views/partials/flashnews.hbs
+++ b/views/partials/flashnews.hbs
@@ -4,10 +4,9 @@
               <div class="d-flex align-items-center mqstyle">
                 <span class="badge badge-dark mr-3">Flash news</span>
                  <p class="mb-0" onclick="window.location.href = '/allnews?category=NEH Report'">
-      <marquee >
-       President Droupadi Murmu arrived Agartala on Wednesday morning on her maiden two-day visit to the state.
-        
-        </marquee>
+      <!--<marquee >
+       
+        </marquee>-->
     </p>
                
               </div>
