--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -9,8 +9,7 @@
 </script>
     <!-- Required meta tags -->
     <meta charset="UTF-8" />
-   
-    <meta name="viewport" content="width=device-width, initial-scale=0.5, user-scalable=yes, minimum-scale=0.5, maximum-scale=2.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />    
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="images/favicon/apple-icon-60x60.png">
