--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -11,6 +11,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />    
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="shortcut icon" href="images/favicon/favicon.ico">
     <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="images/favicon/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-icon-72x72.png">
@@ -44,7 +45,7 @@
       rel="stylesheet"
       href="vendors/mdi/css/materialdesignicons.min.css"
     />
-    <link rel="stylesheet" href="vendors/aos/dist/aos.css/aos.css" />
+    <link rel="stylesheet" href="vendors/aos/aos.css" />
     <!-- End plugin css for this page -->
      <!-- inject:css -->
     <link rel="stylesheet" href="stylesheets/style.css">
@@ -64,12 +65,14 @@
       </div>
     </div>
     
-   
+   <script src="https://code.jquery.com/jquery-3.6.1.min.js" 
+   integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" 
+   crossorigin="anonymous"></script>
     <!-- inject:js -->
     <script src="vendors/js/vendor.bundle.base.js"></script>
     <!-- endinject -->
     <!-- plugin js for this page -->
-    <script src="vendors/aos/dist/aos.js/aos.js"></script>
+    <script src="vendors/aos/aos.js"></script>
     <!-- End plugin js for this page -->
     <!-- Custom js for this page-->
     <script src="javascripts/demo.js"></script>
