--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -77,7 +77,7 @@
     <!-- Custom js for this page-->
     <script src="javascripts/demo.js"></script>
     <script src="javascripts/jquery.easeScroll.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/share-buttons/dist/share-buttons.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/share-buttons/dist/share-buttons.js"></script>
     <!-- End custom js for this page-->
    <script src="https://cdn.jsdelivr.net/npm/node-marquee/dist/cdn/index.min.js"></script>
 </body>
