--- a/views/home.hbs
+++ b/views/home.hbs
@@ -100,7 +100,7 @@
     <div class="col-lg-3 stretch-card grid-margin">
       <div class="card">
         <div class="card-body advertisements">
-          <img src="https://dummyimage.com/300x300/c2c0c2/2e2e33.jpg&text=ads+go+here" />
+          <img alt="ads" src="https://dummyimage.com/300x300/c2c0c2/2e2e33.jpg&text=ads+go+here" />
         </div>
       </div>
     </div>
@@ -148,7 +148,7 @@
     <div class="col-lg-3 stretch-card grid-margin">
       <div class="card">
         <div class="card-body advertisements">
-          <img src="https://dummyimage.com/300x300/c2c0c2/2e2e33.jpg&text=ads+go+here" />
+          <img alt="ads" src="https://dummyimage.com/300x300/c2c0c2/2e2e33.jpg&text=ads+go+here" />
         </div>
       </div>
     </div>
@@ -171,7 +171,7 @@
             <div class="col-sm-4 grid-margin">
               <div class="position-relative">             
                 <div class="rotate-img">
-                  <img src="images/news/politics/{{imageName}}" alt="thumb" class="img-fluid" />
+                  <img  src="images/news/politics/{{imageName}}" alt="thumb" class="img-fluid" />
                 </div>
                
                 <div class="badge-positioned">
@@ -199,7 +199,7 @@
     <div class="col-lg-3 stretch-card grid-margin">
       <div class="card">
         <div class="card-body advertisements">
-          <img src="https://dummyimage.com/300x300/000/d5d5e0.jpg&text=ads+go+here" />
+          <img alt="ads" src="https://dummyimage.com/300x300/000/d5d5e0.jpg&text=ads+go+here" />
         </div>
       </div>
     </div>
@@ -247,7 +247,7 @@
     <div class="col-lg-3 stretch-card grid-margin">
       <div class="card">
         <div class="card-body advertisements">
-          <img src="https://dummyimage.com/300x300/c2c0c2/2e2e33.jpg&text=ads+go+here" />
+          <img alt="ads" src="https://dummyimage.com/300x300/c2c0c2/2e2e33.jpg&text=ads+go+here" />
         </div>
       </div>
     </div>
@@ -295,7 +295,7 @@
     <div class="col-lg-3 stretch-card grid-margin">
       <div class="card">
         <div class="card-body advertisements">
-          <img src="https://dummyimage.com/300x300/c2c0c2/2e2e33.jpg&text=ads+go+here" />
+          <img alt="ads" src="https://dummyimage.com/300x300/c2c0c2/2e2e33.jpg&text=ads+go+here" />
         </div>
       </div>
     </div>
@@ -343,7 +343,7 @@
     <div class="col-lg-3 stretch-card grid-margin">
       <div class="card">
         <div class="card-body advertisements">
-          <img src="https://dummyimage.com/300x300/c2c0c2/2e2e33.jpg&text=ads+go+here" />
+          <img alt="ads" src="https://dummyimage.com/300x300/c2c0c2/2e2e33.jpg&text=ads+go+here" />
         </div>
       </div>
     </div>
@@ -391,7 +391,7 @@
     <div class="col-lg-3 stretch-card grid-margin">
       <div class="card">
         <div class="card-body advertisements">
-          <img src="https://dummyimage.com/300x300/c2c0c2/2e2e33.jpg&text=ads+go+here" />
+          <img alt="ads" src="https://dummyimage.com/300x300/c2c0c2/2e2e33.jpg&text=ads+go+here" />
         </div>
       </div>
     </div>
@@ -439,7 +439,7 @@
     <div class="col-lg-3 stretch-card grid-margin">
       <div class="card">
         <div class="card-body advertisements">
-          <img src="https://dummyimage.com/300x300/c2c0c2/2e2e33.jpg&text=ads+go+here" />
+          <img alt="ads" src="https://dummyimage.com/300x300/c2c0c2/2e2e33.jpg&text=ads+go+here" />
         </div>
       </div>
     </div>
