--- a/views/home.hbs
+++ b/views/home.hbs
@@ -468,7 +468,7 @@
   <div class="carousel-inner">
      {{#list imggallery}}
     <div class="carousel-item drk {{status}}" onclick="window.open('{{url}}','_blank').focus">
-      <img style="height: 450px;" src="{{path}}/{{imageName}}" class="d-block w-100" alt="{{caption}}">
+      <img  src="{{path}}/{{imageName}}" class="d-block w-100" alt="{{caption}}">
       <div class="carousel-caption d-none d-md-block font-weight-600">
         <h5>{{caption}}</h5>
       </div>
