--- a/views/partials/flashnews.hbs
+++ b/views/partials/flashnews.hbs
@@ -5,13 +5,15 @@
                 <span class="badge badge-dark mr-3">Flash news</span>
                  <p class="mb-0" onclick="window.location.href = '/allnews?category=NEH Report'">
       <!--<marquee >
+
        
         </marquee>-->
     </p>
                
               </div>
               <div class="d-flex">
-                <span class="mr-3 text-danger">{{dateFormat now "dddd, MMM Do YYYY"}}  </span>
+                <span class="mr-3 text-danger mr-2">{{dateFormat now "dddd, MMM Do YYYY"}}  </span>
+               
                 <span class="text-danger">32°C,Agartala</span>
               </div>
             </div>
